k8s-resources/01-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  labels:
    app: hello-world
spec:
  containers:
    - image: nazarmedykh/hello-world:v1
      name: app
